# Heller-Godel

./: AGENTS.md  DEPENDENCIES.md  Makefile  README.md  proof-adapter.json  pyproject.toml
data/: exp_008_9_results.csv
docs/: CLAIM_BOUNDARY_REGISTER.md  GODEL_PROVABILITY_IRONY.md  ISSUE_PLAN_LOCKED.md  REPRODUCIBILITY_PLAN.md  SOURCE_CLASSIFICATION.md  proof_dynamics_bridge_v0_1.md
harness/: catalan_a1_harness.py
proof_fabric_kernel/: README.md
reports/: HG-EXP-008.9-summary.md
schemas/: log-prime-volume-artifact.v0.1.md  proof-dynamics-bridge-artifact.v0.1.md  proof_dynamics_bridge.schema.json
scripts/: __init__.py  audit_legacy_topology_terms.py  check_ci_gate_registry.py  check_claim_boundaries.py  emit_mu2_bridge_ledger.py  exp_008_7_analyze.py  exp_008_7_omega_cost.py  exp_008_7_plot.py  exp_008_9_cayley_atlas.py  import_uploaded_sources.py
tests/: test_abelian_hsp.py  test_admissible_statistics.py  test_admissible_statistics_catalan.py  test_admissible_statistics_motzkin.py  test_carry_coboundary.py  test_catalan_a1_harness.py  test_catalan_puiseux.py  test_cayley_spectrum.py  test_chain_product.py  test_claim_text_boundaries.py  test_dimension_spectrum.py  test_emr_complex.py  test_emr_decomposition.py  test_exp_008_7.py  test_exp_008_9_atlas.py  test_general_puiseux_coefficients.py  test_hg_fnd_001_normalization.py  test_hg_fnd_002_generating_function.py  test_hg_fnd_003_puiseux_singular_datum.py  test_hg_fnd_004_branch_killing_cover_singular_unit.py  test_hg_fnd_005_level_1_deligne_unit_framing.py  test_hg_fnd_006_finite_monodromy_deck_character.py  (+15 more)
(+172 files in other folders)
